agrega un limite a la lista de Item de las Categoria